Remove grid-column-gap for overflow bug

--- a/_sass/nspace/core/_layout.sass
+++ b/_sass/nspace/core/_layout.sass
@@ -34,7 +34,6 @@ body
         max-width: $screen-medium-container-width-max
       +screen-large
         grid-template-columns: repeat($screen-large-column-nbr, minmax($grid-column-width-min, $grid-column-width-max))
-        grid-column-gap: $nspace4
         max-width: $screen-large-container-width-max
 
   > header
